Fix flex-flow from inherit to nowrap

--- a/less/lost.less
+++ b/less/lost.less
@@ -1,4 +1,4 @@
-// Lost Grid v5.1.0 - https://github.com/corysimmons/lost
+// Lost Grid v5.1.1 - https://github.com/corysimmons/lost
 
 @gutter: 30px;
 @rtl: false;
@@ -69,7 +69,7 @@
     flex-flow: row wrap;
   }
   & when (@direction = column) {
-    flex-flow: column inherit;
+    flex-flow: column nowrap;
   }
 }
 
