--- a/scss/lost.scss
+++ b/scss/lost.scss
@@ -1,4 +1,4 @@
-// Lost Grid v5.1.0 - https://github.com/corysimmons/lost
+// Lost Grid v5.1.1 - https://github.com/corysimmons/lost
 
 $gutter: 30px !default;
 $rtl: false !default;
@@ -63,7 +63,7 @@ $flexbox: false !default;
     flex-flow: row wrap;
   }
   @if ($direction == column) {
-    flex-flow: column inherit;
+    flex-flow: column nowrap;
   }
 }
 
