--- a/stylus/lost.styl
+++ b/stylus/lost.styl
@@ -1,4 +1,4 @@
-// Lost Grid v5.1.0 - https://github.com/corysimmons/lost
+// Lost Grid v5.1.1 - https://github.com/corysimmons/lost
 
 $gutter = 30px
 $rtl = false
@@ -58,7 +58,7 @@ flex-container($direction = row)
   if $direction is row
     flex-flow: row wrap
   if $direction is column
-    flex-flow: column inherit
+    flex-flow: column nowrap
 
 
 /**
